# py2proto

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.py
outputs/: message_service_pb2.py  message_service_pb2_grpc.py
protos/: message_service.proto
py2proto/: __init__.py  main.py
