[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py2proto"
version = "2.2.0"
description = "An ORM-like Python library for generating and managing gRPC proto files and pb2 files"
readme = "README.md"
authors = [
    {name = "Mahdi Ghasemi", email = "mahdighasemiabari@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["grpc", "protobuf", "code generation", "protobuf ORM", "auto create pb2 & proto file", "py2proto"]
dependencies = [
    "grpcio-tools>=1.30.0",
    "grpcio>=1.30.0",
    "Flask>=2.0.0",
    "protobuf>=3.15.0",
    "requests>=2.25.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/prodbygodfather/py2proto"
"Bug Tracker" = "https://github.com/prodbygodfather/py2proto/issues"

[tool.setuptools]
packages = ["py2proto"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88